--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,11 @@ jobs:
       with:
         node-version: '18' # Or appropriate version for the project
 
-    - name: Create config.js
+    - name: Create config.js with API key
       run: |
-        echo "const CONFIG = {
-            GEMINI_API_KEY: '${{ secrets.GEMINI_API_KEY }}'
-        };" > js/config.js
+        echo "const CONFIG = {" > js/config.js
+        echo "    GEMINI_API_KEY: '${{ secrets.GEMINI_API_KEY }}'" >> js/config.js
+        echo "};" >> js/config.js
       env:
         GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
