--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./ # Assuming the root of the repo is the publish directory
+        publish_dir: ./
+        exclude_assets: '.gitignore' # Assuming the root of the repo is the publish directory
         # If your site is in a subdirectory like 'docs', change publish_dir to 'docs'
         # Or if it builds to a 'build' folder, change it to 'build'
